--- a/portfolio.html
+++ b/portfolio.html
@@ -279,42 +279,48 @@
             <h5>DOŁĄCZ DO NAS</h5>
             <ul class="social_links_icons">
               <li>
-                <a href="/">
-                  <svg width="20x" height="20px">
-                    <use
-                      href="./images/icons.svg#icon-instagram-2"
-                    ></use>
+                <a class="icone-item" href="/">
+                  <svg class="icone" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="/">
                   <svg width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg#icon-twitter-1"
-                    ></use>
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="/">
                   <svg width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg#icon-facebook-1"
-                    ></use>
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="/">
                   <svg width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg#icon-linkedin-1"
-                    ></use>
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
             </ul>
+          </li>
+          <li class="newsletter_form">
+            <form>
+              <label class="newsletter" for="newsletter">ZAPISZ SIĘ DO NEWSLETTERA</label>
+              <div>
+                <input class="input" type="email" name="email_newsletter" id="newsletter" placeholder="E-mail" />
+                <button class="submit" type="submit">
+                  Zapisz się
+                </button>
+                <svg class="icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-icon-send-1"></use>
+                </svg>
+              </div>
+            </form>
           </li>
         </ul>
       </div>
